apps/dev/minio/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:4aC0YxztnV2lwdCcco5BOdjm80OUN1v+FjA=,iv:H42zBO9wNWr7r3Xsqn8HDd6UMJwP6C4/b8pJ0qpQAXY=,tag:ZHTnqvMG5IUNszbQ1g1OoA==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        kubernetes.io/ingress.class: traefik-external
    name: s3
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:fkb2yS45/Ne2oym2H/H17YbGfEzJnNUmF4kcUu1MQ/Y7SvQgag==,iv:3OdI1bHpHxapRci8kWKd7KrL42NvDSXe8jjRffCJtwk=,tag:pbVYvMet28agD4v1xpScDg==,type:str]
          services:
            - kind: TraefikService
              name: s3
              namespace: minio
        - kind: Rule
          match: ENC[AES256_GCM,data:REYPMyhMlfB3UJq53XpnNdsnkfaCvCWA/8IGYLfNgZLQD8Zq3DuQEPLcWQw80oLN6nssx3P2Tz0b+ZGc+uBjNJ5X,iv:OFl5pIBao7/1uXhiTr/K5XSHWCOwkdZ76IWEgspxZHo=,tag:c9zdZeckpk/5Ywx4nkThEA==,type:str]
          middlewares:
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: minio-console
              namespace: minio
    tls:
        domains:
            - main: ENC[AES256_GCM,data:U+ceWxOeuHH8XYfPNAnVOoQetdD309UjjAI=,iv:fCn6DhbKsghsD4GlCmFnG1eUovckAMIPuSLUHdTXAuw=,tag:1/uwcomcV0eLYDGCI+lp4A==,type:str]
              sans:
                - ENC[AES256_GCM,data:MDNtni9iWsEOX2oz6II0mgbwAZyypCJvu9Wd,iv:kVC5VKOAHioxkWvviLVZdItke/L/AF6Pf9w+JwUVuD0=,tag:2PJYhOI+Fp4zIMg3wmFfSg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: s3-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFM1c2SmlNQ1V1L3ZCdkYw
[...]
            PgkdT6ej5g+I9lyJ0Nej3aTnqpoRkForDobvrocJw/PgqwsS3ErsPA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-07T13:34:01Z"
    mac: ENC[AES256_GCM,data:KV4/O0Kwhd/Xyc0Me9wncKObhHQfz82MKjHzTfdL2da6Izs+dc6zwAkfKboY+T1rpepsFTPgERVCZHOUubr0A0gBviLAVyuGQSd+fMs1KC8vXsSDAyZBO8P7Ge1uTxEKPZswWTKx5n5/duvLLnvLmv2vWJZKP5CNRSZbyMC2h1A=,iv:f7ujefj4vy9ypxbBmhpnrP72QAzriMUh7iCVQWSth4g=,tag:czGIAeh7IRITvAOcgv2YyA==,type:str]
    pgp:
        - created_at: "2024-10-07T13:34:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//WTZY6oJL3zNACpCndPgjmJhM53gOmc0VhjUD/pivWG3B
[...]
            =aGSj
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
